Adding anotation support

--- a/app/src/v1/templates/note.html
+++ b/app/src/v1/templates/note.html
@@ -14,8 +14,9 @@
     <link rel='stylesheet' href='TEMPLATE_ASSETS_WEBROOT/global-note-styles.css'>
     <script src='TEMPLATE_ASSETS_WEBROOT/app.js'></script>
     TEMPLATE_SCRIPTS
+    TEMPLATE_ANNOTATION_ASSETS
 </head>
-<body TEMPLATE_BODY>
+<body TEMPLATE_BODY TEMPLATE_ANNOTATIONS>
 <div class='app-container'>
     <div class='horizontal-main-container'>
         <div class='workspace'>
